keycloak/service.yaml
---
{
  apiVersion: "v1",
  kind: "Service",
  metadata: {
    name: "keycloak",
    labels: {
      app: "keycloak",
    },
  },
  spec: {
    selector: {
      app: "keycloak",
    },
    ports: [{
      port: 8080,
      targetPort: "http",
      name: "http",
    }],
  },
}
