keycloak/httproute.yaml
---
{
  apiVersion: "gateway.networking.k8s.io/v1",
  kind: "HTTPRoute",
  metadata: {
    name: "keycloak",
  },
  spec: {
    parentRefs: [{
      name: "gateway",
      namespace: "gateway",
    }],
    hostnames: [
      "keycloak.junjie.pro",
    ],
    rules: [{
      backendRefs: [{
        # Operator-managed Service (default name: CR name + "-service").
        name: "keycloak-service",
        port: 8080,
      }],
    }],
  },
}
